# hospital-management-system

./: .gitignore.txt  CMakeLists.txt  Hospital_Management_System.sln  Hospital_Management_System.vcxproj  Hospital_Management_System.vcxproj.filters  README.md  appointment.cpp  appointment.h  billing.cpp  billing.h  doctor.cpp  doctor.h  main.cpp  mainwindow.cpp  mainwindow.h  patient.cpp  patient.h
